feat: theme & language setting

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -6,5 +6,6 @@
   "settings_themeModeDark": "Tối",
   "settings_languageVietnamese": "Tiếng việt",
   "settings_languageEnglish": "English",
-  "settings_language": "Ngôn ngữ"
+  "settings_language": "Ngôn ngữ",
+  "button_signIn": "Đăng nhập"
 }
