--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,5 +6,6 @@
   "settings_themeModeDark": "Dark",
   "settings_languageVietnamese": "Tiếng việt",
   "settings_languageEnglish": "English",
-  "settings_language": "Language"
+  "settings_language": "Language",
+  "button_signIn": "Sign In"
 }
