Make-unit-test-and-add-fvm

--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -1,4 +1,5 @@
 {
+  "@@locale": "vi",
   "settings_title": "Cài đặt",
   "settings_themeMode": "Chủ đề",
   "settings_themeModeSystem": "Hệ thống",
