--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -23,5 +23,26 @@
   "setting": "Setting",
   "logout": "Logout",
   "profile_text1": "Account",
-  "profile_text2": "General information"
+  "profile_text2": "General information",
+  "welcome_text_1": "Welcome to E-com",
+  "welcome_text_2": "Sign in to continue",
+  "your_email": "Your email",
+  "password": "Password",
+  "or": "OR",
+  "login_with_google": "Login with Google",
+  "login_with_facebook": "Login with Facebook",
+  "dont_have_an_account": "Don't have an account? ",
+  "register": "Register",
+  "forgot_password": "Forgot Password?",
+  "lets_go": "Let's go",
+  "sign_in_title": "Welcome to E-com",
+  "sign_in_sub_title": "Sign in to continue",
+  "sign_up_title": "Let's Get Started",
+  "sign_up_sub_title": "Create an new account",
+  "email_empty": "Please enter Email",
+  "full_name": "Full Name",
+  "confirm_password": "Confirm Password",
+  "full_name_empty": "Please enter Full Name",
+  "email_invalid": "Email invalid",
+  "already_have_account": "have a account?"
 }
