--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -23,5 +23,26 @@
   "setting": "Cài đặt",
   "logout": "Đăng xuất",
   "profile_text1": "Tài khoản",
-  "profile_text2": "Thông tin chung"
+  "profile_text2": "Thông tin chung",
+  "welcome_text_1": "Chào mừng đến E-com",
+  "welcome_text_2": "Đăng nhập để tiếp tục",
+  "your_email": "Email của bạn",
+  "password": "Mật khẩu",
+  "or": "HOẶC",
+  "login_with_google": "Đăng nhập với Google",
+  "login_with_facebook": "Đăng nhập với Facebook",
+  "dont_have_an_account": "Chưa có tài khoản? ",
+  "register": "Đăng ký",
+  "forgot_password": "Quên mật khẩu?",
+  "lets_go": "Đi thôi",
+  "sign_in_title": "Chào mừng đến với E-com",
+  "sign_in_sub_title": "Đăng nhập để tiếp tục",
+  "sign_up_title": "Hãy Bắt Đầu",
+  "sign_up_sub_title": "Tạo một tài khoản mới",
+  "email_empty": "Hãy nhập Email",
+  "full_name": "Họ Tên",
+  "confirm_password": "Confirm Password",
+  "full_name_empty": "Please enter Full Name",
+  "email_invalid": "Email invalid",
+  "already_have_account": "have a account?"
 }
