update onboarding UI

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,48 +1,35 @@
 {
-  "settings_title": "Settings",
-  "settings_themeMode": "Theme",
-  "settings_themeModeSystem": "System",
-  "settings_themeModeLight": "Light",
-  "settings_themeModeDark": "Dark",
-  "settings_languageVietnamese": "Tiếng việt",
-  "settings_languageEnglish": "English",
-  "settings_language": "Language",
-  "button_signIn": "Sign In",
+  "button_ok": "Ok",
+  "button_close": "Close",
+  "button_cancel": "Cancel",
   "button_skip": "Skip",
   "button_next": "Next",
+  "button_login": "Login",
+  "button_logout": "Logout",
+  "button_register": "Register",
   "onboarding_title_01": "Welcome to Surf.",
   "onboarding_description_01": "I provide essential stuff for your ui designs every tuesday!",
   "onboarding_title_02": "Design Template uploads Every Tuesday!",
   "onboarding_description_02": "Make sure to take a look my uplab profile every tuesday",
   "onboarding_title_03": "Download now!",
   "onboarding_description_03": "You can follow me if you wantand comment on any to get some freebies",
-  "changePassword": "Change password",
-  "changeEmail": "Change email",
-  "deleteAccount": "Delete Account",
-  "termpolicy": "Term,Policy",
-  "setting": "Setting",
-  "logout": "Logout",
-  "profile_text1": "Account",
-  "profile_text2": "General information",
-  "welcome_text_1": "Welcome to E-com",
-  "welcome_text_2": "Sign in to continue",
-  "your_email": "Your email",
-  "password": "Password",
-  "or": "OR",
-  "login_with_google": "Login with Google",
-  "login_with_facebook": "Login with Facebook",
-  "dont_have_an_account": "Don't have an account? ",
-  "register": "Register",
-  "forgot_password": "Forgot Password?",
-  "lets_go": "Let's go",
-  "sign_in_title": "Welcome to E-com",
-  "sign_in_sub_title": "Sign in to continue",
-  "sign_up_title": "Let's Get Started",
-  "sign_up_sub_title": "Create an new account",
-  "email_empty": "Please enter Email",
-  "full_name": "Full Name",
-  "confirm_password": "Confirm Password",
-  "full_name_empty": "Please enter Full Name",
-  "email_invalid": "Email invalid",
-  "already_have_account": "have a account?"
+  "sign_in_title": "Sign-In",
+  "sign_in_email": "Email",
+  "sign_in_email_hint": "Enter your email.",
+  "sign_in_password": "Password",
+  "sign_in_password_hint": "Enter your email.",
+  "sign_in_register": "Register",
+  "sign_in_forgot_password": "Forgot Password",
+  "sign_up_title": "Register",
+  "sign_up_username": "Username",
+  "sign_up_email": "Email",
+  "sign_up_email_hint": "Enter your email.",
+  "sign_up_password": "Password",
+  "sign_up_password_hint": "Enter your email.",
+  "sign_up_password_confirm": "Confirm Password",
+  "sign_up_password_confirm_hint": "Enter your email.",
+  "settings_title": "Setting",
+  "settings_language": "Language",
+  "settings_language_english": "English",
+  "settings_language_vietnamese": "Vietnamese"
 }
