--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -7,6 +7,7 @@
   "button_login": "Login",
   "button_logout": "Logout",
   "button_register": "Register",
+  "button_save": "Save",
   "onboarding_title_01": "Welcome to Surf.",
   "onboarding_description_01": "I provide essential stuff for your ui designs every tuesday!",
   "onboarding_title_02": "Design Template uploads Every Tuesday!",
