--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -32,5 +32,7 @@
   "settings_title": "Setting",
   "settings_language": "Language",
   "settings_language_english": "English",
-  "settings_language_vietnamese": "Vietnamese"
+  "settings_language_vietnamese": "Vietnamese",
+  "date_picker_title": "Please select a date",
+  "delete_account_confirmation_title": "Please input the password to delete your account"
 }
